Log level :info for 'prod', cleanup 'project.clj'